stuffs from work

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: FontAwesome, Inconsolata Nerd Font, Helvetica, Arial, sans-serif;
+  font-family: Inconsolata Nerd Font, sans-serif;
   font-size: 18px;
 }
 
