--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,248 +1,154 @@
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
-  font-family: Inconsolata Nerd Font, sans-serif;
-  font-size: 18px;
+  border: none;
+  font-family: "CaskaydiaMono Nerd Font";
+  font-size: 15px;
+  min-height: 5px;
 }
 
 window#waybar {
-  background-color: rgba(43, 48, 59, 0.5);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-  color: #ffffff;
-  transition-property: background-color;
-  transition-duration: .5s;
+  background: rgba(10, 10, 30, 0.85);
 }
 
 window#waybar.hidden {
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
-/*
-window#waybar.empty {
-  background-color: transparent;
+#custom-archicon,
+#clock,
+#cpu,
+#memory,
+#disk,
+#battery,
+#idle_inhibitor,
+#pulseaudio,
+#network {
+  color: #ffffff;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: none;
 }
-window#waybar.solo {
-  background-color: #FFFFFF;
+
+#custom-archicon,
+#cpu,
+#idle_inhibitor {
+  margin-left: 5px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
- */
 
-  window#waybar.termite {
-    background-color: #3F3F3F;
-  }
+#custom-archicon {
+  color: cornflowerblue;
+}
 
-  window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-  }
+#clock,
+#battery,
+#language {
+  margin-right: 5px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 
-  button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
-  }
+#custom-archicon {
+  font-size: 20px;
+  background: #262626; /* visible grey */
+  padding-right: 17px;
+}
 
-  /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-  button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
-  }
+#clock {
+  background: #2a2a2a;
+}
 
-  #workspaces button {
-    padding: 0 30px;
-    background-color: transparent;
-    color: #ffffff;
-  }
+#cpu {
+  background: #2b2b2b;
+}
 
-  #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-  }
+#memory {
+  background: #2c2c2c;
+}
 
-  #workspaces button.focused, #workspaces button.active {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-  }
+#disk {
+  background: #2d2d2d;
+}
 
-  #workspaces button.urgent {
-    background-color: #eb4d4b;
-  }
+#battery {
+  background: #262626;
+}
 
-  #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-  }
+#workspaces {
+  background: #1f1f1f;
+  border-radius: 10px;
+  margin: 6px 5px;
+  padding: 0px 6px;
+}
 
-  #clock,
-  #battery,
-  #cpu,
-  #memory,
-  #disk,
-  #temperature,
-  #backlight,
-  #network,
-  #pulseaudio,
-  #wireplumber,
-  #custom-media,
-  #tray,
-  #mode,
-  #idle_inhibitor,
-  #scratchpad,
-  #mpd {
-    padding: 0 10px;
-    color: #ffffff;
-  }
+#workspaces button {
+  color: #ffffff;
+  background: transparent;
+  padding: 4px 4px;
+  margin: 0px 6px;
+  transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
+}
 
-  #window,
-  #workspaces {
-    margin: 0 4px;
-  }
+#workspaces button.occupied {
+  color: #bbbbbb;
+}
 
-  /* If workspaces is the leftmost module, omit left margin */
-  .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-  }
+#workspaces button.active {
+  color: #ffffff;
+  text-shadow: 0 0 6px #ff0000;
+}
 
-  /* If workspaces is the rightmost module, omit right margin */
-  .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-  }
+#workspaces button:hover {
+  color: #ff0000;
+}
 
-  #clock {
-  }
+#taskbar {
+  background: transparent;
+  border-radius: 10px;
+  padding: 0px 5px;
+  margin: 6px 5px;
+}
 
-  #battery {
-  }
+#taskbar button {
+  padding: 0px 5px;
+  margin: 0px 3px;
+  border-radius: 6px;
+  transition: background 0.3s ease;
+  color: #ffffff;
+}
 
-  #battery.charging, #battery.plugged {
-  }
+#taskbar button.active {
+  background: rgba(255, 0, 0, 0.2);
+  color: #ff0000;
+}
 
-  @keyframes blink {
-    to {
-      background-color: #0000ff;
-      color: #000000;
-    }
-  }
+#taskbar button:hover {
+  background: rgba(255, 0, 0, 0.3);
+  color: #ff0000;
+}
 
-  #battery.critical:not(.charging) {
-    animation-name: blink;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-  }
+#idle_inhibitor {
+  background: #282828;
+  padding-right: 15px;
+  color: #ffffff;
+}
 
-  label:focus {
-    background-color: #000000;
-  }
+#pulseaudio {
+  background: #292929;
+  color: #ffffff;
+}
 
-  #cpu {
-  }
+#network {
+  background: #242424;
+  padding-right: 13px;
+  color: #ffffff;
+}
 
-  #memory {
-  }
-
-  #disk {
-    background-color: #964B00;
-  }
-
-  #backlight {
-  }
-
-  #network {
-  }
-
-  #network.disconnected {
-  }
-
-  #pulseaudio {
-  }
-
-  #pulseaudio.muted {
-  }
-
-  #wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
-  }
-
-  #wireplumber.muted {
-    background-color: #f53c3c;
-  }
-
-  #custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-  }
-
-  #custom-media.custom-spotify {
-    background-color: #66cc99;
-  }
-
-  #custom-media.custom-vlc {
-    background-color: #ffa000;
-  }
-
-  #temperature {
-  }
-
-  #temperature.critical {
-    background-color: #eb4d4b;
-  }
-
-  #tray {
-  }
-
-  #tray > .passive {
-    -gtk-icon-effect: dim;
-  }
-
-  #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-  }
-
-  #idle_inhibitor {
-    color: #cccccc;
-  }
-
-  #idle_inhibitor.activated {
-    color: #ffffff;
-  }
-
-  #mpd { }
-
-  #mpd.disconnected { }
-
-  #mpd.stopped { }
-
-  #mpd.paused { }
-
-  #language {
-    padding: 0 5px;
-    min-width: 20px;
-  }
-
-  #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-  }
-
-  #keyboard-state > label {
-    padding: 0 5px;
-  }
-
-  #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-  }
-
-  #scratchpad {
-    background: rgba(0, 0, 0, 0.2);
-  }
-
-  #scratchpad.empty {
-    background-color: transparent;
-  }
+@keyframes blink {
+to {
+  background-color: #ff0000;
+  color: #ffffff;
+}
+}
